# text2sem

./: LICENSE  README.md  ai-generated-docstrings.txt  pyproject.toml
configs/t5base-50epoch/seed1/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed10/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed2/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed3/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed4/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed5/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed6/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed7/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed8/: FML.yaml  FOL.yaml
configs/t5base-50epoch/seed9/: FML.yaml  FOL.yaml
configs/t5large-50epoch/seed1/: FML.yaml  FOL.yaml
configs/t5large-50epoch/seed10/: FML.yaml  FOL.yaml
configs/t5large-50epoch/seed2/: FML.yaml  (+1 more)
data/fol/: test.csv  train.csv  trial.csv
data/formula/: test.csv  train.csv  trial.csv
scripts/: analyze_category_slices.py  attach_predicted_formula_valid_only_tsv.py  classify_errors_langchain.py  exp-in-context.sh  exp-sft.sh  install-vampire.sh  make_seed_configs.py  summarize_results.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  data_splitter.py  dataset_builder.py  preprocessor.py  tokenizer_utils.py
src/evaluation/: __init__.py  evaluator-master.py  evaluator.py
src/in-context-learning/: predict.py
src/models/: __init__.py  model_config.py  semantic_parser.py
src/training/: __init__.py  callbacks.py  metrics.py  train.py  trainer.py
src/utils/: __init__.py  config.py  logging_utils.py  reproducibility.py
(+14 files in other folders)
